fix ICE abilities menu alignment issue

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -1171,8 +1171,8 @@ nav ul
 
             .abilities
               transform(rotate(90deg))
-              top: -135px
-              left: -75px
+              top: -73px
+              left: 12px
 
           .content.center
             left: -13px
